# Kurbatov20212

./: README.md  array.cpp  array.hpp
5-min/: 11.cpp
lab1/: CMakeLists.txt  FixList.txt  hash_table.cpp  hash_table.hpp  hash_table_test.cpp  main.cpp
lab1(hash_table)/: hash_table.cpp  hash_table.hpp
lab2/: CMakeLists.txt  command.cpp  command.hpp  interpreter.cpp  interpreter.hpp  interpreter_error.hpp  interpreter_test.cpp  main.cpp  my_stack.cpp  my_stack.hpp
lab3/: CMakeLists.txt  any.cpp  any.hpp  any_tests.cpp  main.cpp
